tamthanhtran.me 0.6.9.4 Fix resize problem on mobile browsers where the resize event is triggered by scrolling

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -65,6 +65,10 @@ a {
   display: block;
   padding: 20px;
   width: 100vw;
+  min-height: 100vh;
+  min-height: calc(100vh - 52px);
+  min-height: -webkit-calc(100vh - 52px);
+  min-height: -moz-calc(100vh - 52px);
 }
 
 .content-text {
